dfir_rs/tests/compile-fail-stable/surface_anti_join_badtypes.stderr
error[E0631]: type mismatch in closure arguments
 --> tests/compile-fail-stable/surface_anti_join_badtypes.rs:5:13
  |
5 |         j = anti_join() -> for_each(std::mem::drop);
  |             ^^^^^^^^^
  |             |
  |             expected due to this
  |             found signature defined here
  |
  = note: expected closure signature `fn(&str) -> _`
             found closure signature `fn({integer}) -> _`
  = note: required for `dfir_rs::sinktools::for_each::ForEach<{closure@$DIR/tests/compile-fail-stable/surface_anti_join_badtypes.rs:5:13: 5:22}>` to implement `dfir_rs::futures::Sink<&str>`
note: required by a bound in `pivot_run_sg_2v1`
 --> tests/compile-fail-stable/surface_anti_join_badtypes.rs:5:13
  |
5 |         j = anti_join() -> for_each(std::mem::drop);
  |             ^^^^^^^^^ required by this bound in `pivot_run_sg_2v1`
